# bippy

./: .gitignore  LICENSE  README.md  TESTING.md  bippy.cabal  bitcoin-pp.cabal  cabal.project  cabal.project.freeze  flake.nix  shell.nix  stack.yaml
Network/: Bippy.hs
Network/Bippy/: Constants.hs  Proto.hs  Types.hs
app/: Main.hs
integration/: build.sbt
integration/src/test/scala/aftok/bippy/: CrossValidate.scala
src/: Bippy.hs
src/Bippy/: Constants.hs  Proto.hs  Types.hs
src/Bippy/Test/: Proto.hs  Types.hs
src/Network/: Bippy.hs  BitcoinPP.hs
src/Network/Bippy/: Proto.hs  Types.hs
src/Network/Bippy/Test/: Proto.hs  Types.hs
src/Network/BitcoinPP/Proto/: Payment.hs  PaymentACK.hs  Request.hs
test/: Main.hs
test-resources/: client.csr  client.key  create_cert_chain.sh
test-resources/ca/: ca.cnf  index.txt  intermediate.cnf
test-resources/ca/certs/: ca.cert.pem
test-resources/ca/newcerts/: 1000.pem
test-resources/ca/private/: ca.key.pem
test/Bippy/: Tests.hs
test/Network/Bippy/: Tests.hs
