name:                bippy
version:             0.1.0.0
synopsis:            An implementation of the BIP-70/71/72 Bitcoin Payment Protocol in Haskell
homepage:            https://github.com/aftok/bitcoin-pp
license:             MIT
license-file:        LICENSE
author:              Kris Nuttycombe
maintainer:          kris@aftok.com
category:            Bitcoin, Finance
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , ScopedTypeVariables
  ghc-options:        -Wall -Werror
  exposed-modules:     
    Bippy
    Bippy.Proto
    Bippy.Constants
    Bippy.Types
    Bippy.Test.Types
    Bippy.Test.Proto

  build-depends: base 
               , bytestring   
               , cereal
               , cryptonite
               , either
               , haskoin-core
               , lens
               , mtl     
               , network-uri
               , protobuf     
               , QuickCheck                     
               , quickcheck-instances
               , text         
               , time
               , x509
               , x509-store

executable bippy-cli
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , ScopedTypeVariables
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall 
                      -Werror
  build-depends: base
               , bippy
               , bytestring
               , cereal
               , cryptonite
               , either
               , haskoin-core
               , mtl     
               , optparse-applicative
               , protobuf     
               , string-conversions
               , time
               , transformers
               , QuickCheck                     
               , x509
               , x509-store

test-suite bippy-test
  hs-source-dirs:     test
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , ScopedTypeVariables
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  other-modules:     
    Bippy.Tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  build-depends: bippy
               , base
               , bytestring  
               , haskoin-core
               , x509
               , x509-store
               , HUnit                          
               , QuickCheck                     
               , test-framework                 
               , test-framework-quickcheck2     
               , test-framework-hunit           
